--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,24 +4,24 @@
 
 @layer base {
   :root {
-    --background: 244 81% 55%;
-    --foreground: 0 0% 100%;
-    --card: 253 62% 64%;
-    --card-foreground: 0 0% 100%;
-    --popover: 253 62% 50%;
-    --popover-foreground: 0 0% 100%;
+    --background: 0 0% 98%; /* Light Grayish White */
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
     --primary: 221 83% 53%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 253 62% 64%;
-    --secondary-foreground: 0 0% 100%;
-    --muted: 253 62% 64%;
-    --muted-foreground: 0 0% 90%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
     --accent: 284 100% 74%;
     --accent-foreground: 0 0% 100%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 253 62% 70%;
-    --input: 253 62% 70%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
     --ring: 221 83% 53%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
@@ -39,24 +39,24 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
   .dark {
-    --background: 244 81% 55%;
-    --foreground: 0 0% 100%;
-    --card: 253 62% 64%;
-    --card-foreground: 0 0% 100%;
-    --popover: 253 62% 50%;
-    --popover-foreground: 0 0% 100%;
+    --background: 240 10% 3.9%;
+    --foreground: 0 0% 98%;
+    --card: 240 10% 3.9%;
+    --card-foreground: 0 0% 98%;
+    --popover: 240 10% 3.9%;
+    --popover-foreground: 0 0% 98%;
     --primary: 221 83% 53%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 253 62% 64%;
-    --secondary-foreground: 0 0% 100%;
-    --muted: 253 62% 64%;
-    --muted-foreground: 0 0% 90%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
     --accent: 284 100% 74%;
     --accent-foreground: 0 0% 100%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-    --border: 253 62% 70%;
-    --input: 253 62% 70%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
     --ring: 221 83% 53%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
